DIS-72 big driver refactor to use REST for requests only and getting rid of actors
